--- a/src/test.html
+++ b/src/test.html
@@ -8,6 +8,7 @@
 <body>
 <p>This is some awesome new text</p>
 <p>Perhaps another line of code</p>
+<p>Going to remove this line of</p>
     
 </body>
 </html>
